added updated page. finieshed the update part of crud

--- a/app_server/views/resourceInfo.pug
+++ b/app_server/views/resourceInfo.pug
@@ -7,13 +7,19 @@ block content
       .resource-info-box.resource-info-a
           .resource-info-sub-box.resource-info-sub-a
               h1.header_space_grid.text_black= sourceDetails.Title
+              a(href='/resource/', style='color:white')
+                  span.spacing.hi-icon.hi-icon-arrow
+                      i.fa.fa-arrow-left.fa-2x
+              a(href='/resource/update/'+ sourceDetails.Id, style='color:white')
+                  span.spacing.hi-icon.hi-icon-info
+                      i.fa.fa-pencil-square-o.fa-2x
           .resource-info-sub-box.resource-info-sub-b
               dl.uk-description-list-line.uk-contrast
                   dt.header_text.title_orange Source  
                   hr.hr_padding.hr_color
                   |     
                   dd.text_size.space.text_white #{sourceDetails.Source}
-
+                  
                   dt.header_text.title_orange Categories
                   hr.hr_padding.hr_color
                   |     
@@ -25,7 +31,7 @@ block content
                   dd.text_size.space.text_white #{sourceDetails.Type}
 
           .resource-info-sub-box.resource-info-sub-c
-              .resource-info-sub-box.resource-info-sub-c-textbox
+              .resource-info-sub-box.resource-info-sub-c-textbox.scroll
                   dl.uk-description-list-line.uk-contrast
                      dt.header_text.title_orange Description
                      hr.hr_padding.hr_color
