--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -22,7 +22,8 @@ body{
 .paragraph_space {
      padding: 0 12%;
      text-align: center;
-     font-family: Impact,sans-serif!important;
+     font-family: "Bookman Old Style";
+     letter-spacing: 2px;
      font-size: 1.3rem;
 }
 
@@ -31,8 +32,10 @@ body{
      justify-content: center;
      text-align: center;
      line-height: 1.9rem;
-     font-family: Impact,sans-serif!important;
+     font-family: "Bookman Old Style"; 
+     letter-spacing: 2px;
      margin-bottom: 0;
+
 
 
 }
@@ -665,7 +668,7 @@ body {
 .about-sub-box {
   background-color: #212C38;
   color: white;
-  font-family: Impact;
+ 
 }
 
 .about-sub-a {
@@ -705,9 +708,8 @@ body {
   grid-template-rows: repeat(1, 800px);
 
   background-color: #212C38;
-  color: #444;
 
-   
+
 }
 .resource-info-box {
   background-color: #212C38;
@@ -738,7 +740,7 @@ body {
 .resource-info-sub-a {
     grid-column: 1/-1;
     grid-row: 1;
-    background-color: white;
+    background-color: #212C38;
     
 
     padding-top: 10%;
@@ -761,7 +763,7 @@ body {
 
     display:grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(4, 200px);
+    grid-template-rows: repeat(4, 100px);
 
 }
 
@@ -770,7 +772,7 @@ body {
     grid-column:1/-1;
     grid-row: 1 /span 2;
     background-color: #212C38;
-
+   
 
 }
 
@@ -781,6 +783,10 @@ body {
     background-color: #212C38;
 
 
+
+}
+.scroll{
+    overflow: scroll;
 }
 
 
@@ -796,7 +802,9 @@ body {
 
 
 .header_text{
-    font-family: Impact;
+    font-family: "Bookman Old Style";
+    
+    letter-spacing: 2px;
     padding: 2% 5%;
 }
 
@@ -806,6 +814,9 @@ body {
 
 .text_white{
   color: #fff;
+  font-family: "Bookman Old Style";
+  letter-spacing: 2px;
+
 }
 
 .hr_padding{
@@ -871,9 +882,9 @@ body {
 
 .resource-add-box-a {
 
-  background-color: #FFFFFF;
+  background-color: #212C38;
 
- 
+    border-bottom: 2px solid white;
 
 }
 
@@ -903,7 +914,7 @@ body {
 
     grid-row: 2/-1;
 
-    border-right: 1px solid white;
+    
 
 }
 
@@ -933,15 +944,13 @@ body {
 
 .text_black{
 
-    color: #000;
+    color: #F6672E;
 
-    font-size: 5rem;
+    font-size: 2.5rem;
 
     font-weight: 100;
 
   }
-
-
 
 
 
@@ -1190,6 +1199,26 @@ body {
     color: #F6672E;
 }
 
+.hi-icon-info{
+    float: right;
+}
+
+.hi-icon-info:hover:before{
+    content: "Edit ";
+    font-family: "Bookman Old Style";
+    letter-spacing: .4px;
+}
+
+.hi-icon-arrow{
+    float: left;
+}
+
+
+.hi-icon-arrow:hover:after{
+    content: " Go Back";
+    font-family: "Bookman Old Style";
+    letter-spacing: .4px;
+}
 
 header{
   text-align:right;
